[gd_scene load_steps=4 format=3 uid="uid://cj1s32in6tw1k"]

[ext_resource type="Script" uid="uid://xdcqf1dl3tvr" path="res://Scripts/robot.gd" id="1_2vrla"]
[ext_resource type="Texture2D" uid="uid://db7p5lde12lqi" path="res://icon.svg" id="2_6phhs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_54a6q"]
size = Vector2(16, 16)

[node name="Robot" type="CharacterBody2D"]
script = ExtResource("1_2vrla")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_54a6q")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.25000003, 0)
scale = Vector2(0.12890626, 0.12500001)
texture = ExtResource("2_6phhs")
metadata/_edit_lock_ = true

[node name="ForwardRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 14)
metadata/_edit_lock_ = true

[node name="BackwardRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, -14)
metadata/_edit_lock_ = true

[node name="LeftRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(14, 0)
metadata/_edit_lock_ = true

[node name="RightRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(-14, 0)
metadata/_edit_lock_ = true
